--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "sweetalert2": "^11.15.10",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
